# Student-Course-API-

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 157c0e82c08d_.py  5fe434015606_initial_revision.py  64d986dd781d_.py  6a405cf9efde_none.py  81370f1c0157_.py  e9168bef13ce_initial.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py  user.py
