[tool.poetry]
name = "Student-Course API"
version = "0.1.0"
description = "A Student-Inventory API"
authors = ["Oluwamuyiwa Dosunmu"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.3"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
