[tool.poetry]
name = "Learning Management System"
version = "0.1.0"
description = "Student and Course management system"
authors = ["Oluwamuyiwa Dosunmu"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
