[tool.poetry]
name = "Learning Management System"
version = "0.1.0"
description = "Student and Course management system"
authors = ["Oluwamuyiwa Dosunmu"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''